--- a/index.html
+++ b/index.html
@@ -5,101 +5,109 @@
   <title>SharpeSystem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: #ffffff;
-      color: #111;
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background: #0b0b0c;
+    color: #f5f5f5;
+  }
 
-    .page {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 40px 16px;
-    }
+  .page {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 16px;
+  }
 
-    .box {
-      max-width: 640px;
-      width: 100%;
-      text-align: center;
-    }
+  .box {
+    max-width: 640px;
+    width: 100%;
+    text-align: center;
+  }
 
-    .logo {
-      font-size: 36px;
-      font-weight: 800;
-      letter-spacing: -0.03em;
-      margin-bottom: 8px;
-    }
+  .logo {
+    font-size: 36px;
+    font-weight: 800;
+    letter-spacing: -0.03em;
+    margin-bottom: 8px;
+  }
 
-    .logo .e {
-      color: #c62828;
-    }
+  .logo .e {
+    color: #dc2626;
+  }
 
-    .tagline {
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 32px;
-    }
+  .tagline {
+    font-size: 14px;
+    color: #a1a1aa;
+    margin-bottom: 32px;
+  }
 
-    .message {
-      font-size: 22px;
-      line-height: 1.35;
-      margin-bottom: 28px;
-    }
+  .message {
+    font-size: 22px;
+    line-height: 1.35;
+    margin-bottom: 28px;
+  }
 
-    .input-wrap {
-      border: 1px solid #ddd;
-      border-radius: 999px;
-      padding: 12px 16px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+  .input-wrap {
+    border: 1px solid #2a2a2e;
+    border-radius: 999px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: #111113;
+  }
 
-    .input-wrap input {
-      border: none;
-      outline: none;
-      width: 100%;
-      font-size: 16px;
-    }
+  .input-wrap input {
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 16px;
+    background: transparent;
+    color: #f5f5f5;
+  }
 
-    .buttons {
-      margin-top: 18px;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
+  .input-wrap input::placeholder {
+    color: #9ca3af;
+  }
 
-    button {
-      border: 1px solid #ddd;
-      background: #f7f7f7;
-      padding: 10px 16px;
-      border-radius: 999px;
-      cursor: pointer;
-      font-size: 14px;
-    }
+  .buttons {
+    margin-top: 18px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
 
-    button:hover {
-      background: #efefef;
-    }
+  button {
+    border: 1px solid #2a2a2e;
+    background: #1a1a1e;
+    padding: 10px 16px;
+    border-radius: 999px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #f5f5f5;
+  }
 
-    .note {
-      margin-top: 18px;
-      font-size: 13px;
-      color: #666;
-      min-height: 18px;
-    }
+  button:hover {
+    background: #222226;
+  }
 
-    footer {
-      margin-top: 40px;
-      font-size: 12px;
-      color: #888;
-    }
-  </style>
+  .note {
+    margin-top: 18px;
+    font-size: 13px;
+    color: #a1a1aa;
+    min-height: 18px;
+  }
+
+  footer {
+    margin-top: 40px;
+    font-size: 12px;
+    color: #9ca3af;
+  }
+</style>
 </head>
 
 <body>
@@ -122,7 +130,7 @@
           <input
             type="text"
             id="startInput"
-            placeholder="Type a few words…"
+            placeholder="Help us understand what you need"
             maxlength="200"
           >
         </div>
