--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <input
             type="text"
             id="startInput"
-            placeholder="Help us understand what you need"
+            placeholder="What's going on?"
             maxlength="200"
           >
         </div>
