--- a/insurance-claims.html
+++ b/insurance-claims.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Calm, plain navigation for insurance claims when you’re not sure what to do next." />
 
   <!-- Global theme -->
-  <link rel="stylesheet" href="/styles.css" />
+ <link rel="stylesheet" href="./styles.css" />
 
   <!-- Page-only helpers (minimal) -->
   <style>
