--- a/index.html
+++ b/index.html
@@ -1,174 +1,60 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>SharpeSystem</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-  body {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    background: #0b0b0c;
-    color: #f5f5f5;
-  }
-
-  .page {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px 16px;
-  }
-
-  .box {
-    max-width: 640px;
-    width: 100%;
-    text-align: center;
-  }
-
-  .logo {
-    font-size: 36px;
-    font-weight: 800;
-    letter-spacing: -0.03em;
-    margin-bottom: 8px;
-  }
-
-  .logo .e {
-    color: #dc2626;
-  }
-
-  .tagline {
-    font-size: 14px;
-    color: #a1a1aa;
-    margin-bottom: 32px;
-  }
-
-  .message {
-    font-size: 22px;
-    line-height: 1.35;
-    margin-bottom: 28px;
-  }
-
-  .input-wrap {
-    border: 1px solid #2a2a2e;
-    border-radius: 999px;
-    padding: 12px 16px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    background: #111113;
-  }
-
-  .input-wrap input {
-    border: none;
-    outline: none;
-    width: 100%;
-    font-size: 16px;
-    background: transparent;
-    color: #f5f5f5;
-  }
-
-  .input-wrap input::placeholder {
-    color: #9ca3af;
-  }
-
-  .buttons {
-    margin-top: 18px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-
-  button {
-    border: 1px solid #2a2a2e;
-    background: #1a1a1e;
-    padding: 10px 16px;
-    border-radius: 999px;
-    cursor: pointer;
-    font-size: 14px;
-    color: #f5f5f5;
-  }
-
-  button:hover {
-    background: #222226;
-  }
-
-  .note {
-    margin-top: 18px;
-    font-size: 13px;
-    color: #a1a1aa;
-    min-height: 18px;
-  }
-
-  footer {
-    margin-top: 40px;
-    font-size: 12px;
-    color: #9ca3af;
-  }
-</style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
+
+  <!-- Shared header -->
+  <div id="site-header"></div>
+  <script>
+    fetch('/partials/header.html')
+      .then(r => r.text())
+      .then(html => { document.getElementById('site-header').innerHTML = html; })
+      .catch(() => {});
+  </script>
+
   <div class="page">
-    <div class="box">
-      <div class="logo">
-        Sharp<span class="e">E</span>System
-      </div>
-      <div class="tagline">
-        A calm, structured way to find the next step.
-      </div>
+    <div class="container content" style="text-align:center; padding:100px 20px;">
 
-      <div class="message">
-        Let’s start where you are.<br>
-        Where would you like to begin?
-      </div>
+      <h1 style="font-size:40px; margin-bottom:30px;">SharpeSystem</h1>
 
-      <form id="startForm">
-        <div class="input-wrap">
-          <input
-            type="text"
-            id="startInput"
-            placeholder="What's going on?"
-            maxlength="200"
-          >
-        </div>
+      <form id="issueForm" style="max-width:600px; margin:0 auto;">
+        <input 
+          type="text" 
+          id="issueInput" 
+          name="issue"
+          placeholder="What’s going on?"
+          required
+          autocomplete="off"
+          style="width:100%; padding:16px; font-size:18px; border-radius:8px; border:1px solid #ccc;"
+        />
 
-        <div class="buttons">
-          <button type="submit">Start</button>
-        </div>
-
-        <div class="note" id="note"></div>
+        <button 
+          type="submit" 
+          style="margin-top:20px; padding:14px 30px; font-size:16px; border:none; border-radius:8px; cursor:pointer;"
+        >
+          Start
+        </button>
       </form>
 
-      <footer>
-        SharpeSystem is being built to provide structured guidance.<br>
-        If you’re in immediate danger, contact local emergency services.
-      </footer>
     </div>
   </div>
 
   <script>
-    const form = document.getElementById("startForm");
-    const input = document.getElementById("startInput");
-    const note = document.getElementById("note");
-
-    form.addEventListener("submit", function (e) {
+    document.getElementById('issueForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const text = input.value.trim();
 
-      if (!text) {
-        note.textContent = "You can start by typing a few words.";
-        return;
-      }
+      const issue = document.getElementById('issueInput').value.trim();
+      if (!issue) return;
 
-      try {
-        localStorage.setItem("sharpe_start", text);
-      } catch (e) {}
-
-      note.textContent = "Got it. We’ll help you turn this into a clear next step.";
+      window.location.href = "/intake.html?issue=" + encodeURIComponent(issue);
     });
   </script>
+
 </body>
 </html>
